[package]
authors = [
  "Magnus Hallin <mhallin@fastmail.com>",
  "Christoph Herzog <chris@theduke.at>",
  "Christian Legnitto <christian@legnitto.com>",
]
categories = ["web-programming"]
description = "GraphQL server library"
documentation = "https://docs.rs/juniper"
edition = "2018"
keywords = ["graphql", "server", "web", "rocket"]
license = "BSD-2-Clause"
name = "juniper"
readme = "../README.md"
repository = "https://github.com/graphql-rust/juniper"
version = "0.15.2"

[badges]
travis-ci = {repository = "graphql-rust/juniper"}

[features]
default = [
  "bson",
  "chrono",
  "schema-language",
  "url",
  "uuid",
]
expose-test-schema = ["anyhow", "serde_json"]
graphql-parser-integration = ["graphql-parser"]
scalar-naivetime = []
schema-language = ["graphql-parser-integration"]

[dependencies]
juniper_codegen = {version = "0.15.2", path = "../juniper_codegen"}

anyhow = {version = "1.0.32", optional = true, default-features = false}
async-trait = "0.1.39"
bson = {version = "1.0", optional = true}
chrono = {version = "0.4", default-features = false, optional = true}
chrono-tz = {version = "0.5", default-features = false, optional = true}
fnv = "1.0.3"
futures = {version = "0.3.1", features = ["alloc"], default-features = false}
futures-enum = {version = "0.1.12", default-features = false}
graphql-parser = {version = "0.3", optional = true}
indexmap = {version = "1.0", features = ["serde-1"]}
serde = {version = "1.0.8", features = ["derive"], default-features = false}
serde_json = {version = "1.0.2", default-features = false, optional = true}
static_assertions = "1.1"
url = {version = "2.0", optional = true}
uuid = {version = "0.8", default-features = false, optional = true}

[dev-dependencies]
bencher = "0.1.2"
pretty_assertions = "0.6.1"
serde_json = "1.0.2"
tokio = {version = "1.1", features = ["macros", "rt-core", "time"]}

[[bench]]
harness = false
name = "bench"
path = "benches/bench.rs"
