[package]
authors = ["Jordao Rosario <jordao.rosario01@gmail.com>"]
description = "Juniper GraphQL integration with Actix"
documentation = "https://docs.rs/juniper_actix"
edition = "2018"
license = "BSD-2-Clause"
name = "juniper_actix"
repository = "https://github.com/graphql-rust/juniper"
version = "0.2.2"

[features]
subscriptions = ["juniper_graphql_ws"]

[dependencies]
actix = "0.11.0-beta.1 "
actix-web = "4.0.0-beta.1"
actix-web-actors = "4.0.0-beta.1"

juniper = {version = "0.15.2", path = "../juniper", default-features = false}
juniper_graphql_ws = {version = "0.2.2", path = "../juniper_graphql_ws", optional = true}

anyhow = "1.0"
futures = "0.3.5"
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.57"
thiserror = "1.0"
tokio = {version = "1.1", features = ["time"]}

[dev-dependencies]
actix-cors = "0.5"
actix-identity = "0.3.1"
actix-rt = "2.0.0-beta.2"

juniper = {version = "0.15.2", path = "../juniper", features = ["expose-test-schema"]}

bytes = "0.6"
env_logger = "0.8"
log = "0.4"
