[package]
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"
name = "juniper_benchmarks"
version = "0.1.0"

[dependencies]
futures = "0.3"
juniper = {path = "../juniper"}

[dev-dependencies]
criterion = "0.3"
tokio = {version = "1.1", features = ["rt-core", "rt-threaded"]}

[[bench]]
harness = false
name = "benchmark"
