[package]
authors = ["Christopher Brown <ccbrown112@gmail.com>"]
description = "GraphQL over WebSocket protocol implementation for Juniper"
documentation = "https://docs.rs/juniper_graphql_ws"
edition = "2018"
keywords = ["apollo", "graphql", "graphql-ws", "juniper"]
license = "BSD-2-Clause"
name = "juniper_graphql_ws"
repository = "https://github.com/graphql-rust/juniper"
version = "0.2.2"

[dependencies]
juniper = {version = "0.15.2", path = "../juniper", default-features = false}
juniper_subscriptions = {version = "0.15.2", path = "../juniper_subscriptions"}
serde = {version = "1.0.8", features = ["derive"], default-features = false}
tokio = {version = "1.1.1", features = ["macros", "rt-core", "time"], default-features = false}

[dev-dependencies]
serde_json = "1.0"
