[package]
authors = ["Damir Vandic <info@dvic.io>"]
description = "Juniper GraphQL integration with Hyper"
documentation = "https://docs.rs/juniper_hyper"
edition = "2018"
license = "BSD-2-Clause"
name = "juniper_hyper"
repository = "https://github.com/graphql-rust/juniper"
version = "0.6.2"

[dependencies]
futures = "0.3.1"
hyper = "0.13"
juniper = {version = "0.15.2", path = "../juniper", default-features = false}
serde_json = "1.0"
tokio = "0.2"
url = "2"

[dev-dependencies]
juniper = {version = "0.15.2", path = "../juniper", features = ["expose-test-schema"]}
pretty_env_logger = "0.4"
reqwest = {version = "0.11", features = ["blocking", "rustls-tls"]}
tokio = {version = "1.1", features = ["macros"]}
