[package]
authors = ["nWacky <gosha.evtushenko@gmail.com>"]
description = "Juniper SubscriptionCoordinator and SubscriptionConnection implementations"
documentation = "https://docs.rs/juniper_subscriptions"
edition = "2018"
license = "BSD-2-Clause"
name = "juniper_subscriptions"
repository = "https://github.com/graphql-rust/juniper"
version = "0.15.2"

[dependencies]
futures = "0.3.1"
juniper = {version = "0.15.2", path = "../juniper", default-features = false}

[dev-dependencies]
serde_json = "1.0"
tokio = {version = "1.1", features = ["macros", "rt-core"]}
