[package]
authors = ["Tom Houlé <tom@tomhoule.com>"]
description = "Juniper GraphQL integration with Warp"
documentation = "https://docs.rs/juniper_warp"
edition = "2018"
license = "BSD-2-Clause"
name = "juniper_warp"
repository = "https://github.com/graphql-rust/juniper"
version = "0.6.1"

[features]
subscriptions = ["juniper_graphql_ws"]

[dependencies]
anyhow = "1.0"
bytes = "0.5"
futures = "0.3.1"
juniper = {version = "0.15.2", path = "../juniper", default-features = false}
juniper_graphql_ws = {version = "0.2.2", path = "../juniper_graphql_ws", optional = true}
serde = {version = "1.0.75", features = ["derive"]}
serde_json = "1.0.24"
thiserror = "1.0"
tokio = {version = "1.1", features = ["blocking", "rt-core"]}
warp = "0.2"

[dev-dependencies]
env_logger = "0.8"
juniper = {version = "0.15.2", path = "../juniper", features = ["expose-test-schema"]}
log = "0.4"
percent-encoding = "2.1"
tokio = {version = "1.1", features = ["blocking", "macros", "rt-core"]}
url = "2"
