[package]
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
edition = "2018"
name = "actix_subscriptions"
publish = false
version = "0.1.0"

[dependencies]
actix-cors = "0.5"
actix-web = "3.3"
env_logger = "0.8"
futures = "0.3"
rand = "0.7"
serde = "1.0"
serde_json = "1.0"
tokio = {version = "1.1", features = ["macros", "rt-core"]}

juniper = {path = "../../juniper", features = ["expose-test-schema"]}
juniper_actix = {path = "../../juniper_actix", features = ["subscriptions"]}
juniper_graphql_ws = {path = "../../juniper_graphql_ws"}
