[package]
authors = ["Jordao Rosario <jordao.rosario01@gmail.com>"]
edition = "2018"
name = "basic_subscriptions"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.1", features = ["rt-core", "macros", "stream"]}

juniper = {git = "https://github.com/graphql-rust/juniper"}
juniper_subscriptions = {git = "https://github.com/graphql-rust/juniper"}
