[package]
edition = "2018"
name = "juniper_tests"
publish = false
version = "0.1.0"

[dependencies]
derive_more = "0.99"
futures = "0.3"
juniper = {path = "../../juniper"}

[dev-dependencies]
async-trait = "0.1.39"
fnv = "1.0"
serde_json = "1.0"
tokio = {version = "1.1", features = ["macros", "rt-core", "time"]}
